fix glyph link vertical alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,3 @@ a,
 div {
   -webkit-tap-highlight-color: transparent;
 }
-
-html, body {
-  @apply bg-brandDarkAppBackground;
-}
